fix: visible burger on 768 version (2.04.2023 21:44)

--- a/shelter/styles/header.css
+++ b/shelter/styles/header.css
@@ -72,6 +72,10 @@ header {
   visibility: hidden;
 }
 
+.burger-menu {
+  display: none;
+}
+
 @media (max-width: 1279px) {
 
   header {
